htdocs/t/default.css
/* ... */
#top .nav img{}
#top .nav2{display:none;position:absolute;right:0;top:84px;line-height:24px;/*index-page*/}
#top form{position:absolute;right:0;top:20px;display:none;}
#top form input{font-size:11px;height:17px;border:1px solid #fff;border-top-color:#c9c9c9;line-height:17px;padding-top:2px;width:175px;margin-right:10px;}
form button{vertical-align:top;}
form input{vertical-align:middle;}
form p{display:inline;}
form .b p{display:block;padding:0;}
label{display:block;}
#main-wrapper{margin:0 auto;width:96em; position:relative;}
.index-wrapper{position:relative;height:420px;}
/* Index form login */
.index-page form{display:none;font-size:12px;position:absolute;right:-2px;height:190px;width:256px;padding:18px 30px;background:url(bg/form/index.png) no-repeat 0 0;top:40px;}
.index-wrapper label{display:block;clear:both;padding-top:10px;height:25px;line-height:25px;position:relative;}
.index-wrapper label input{position:absolute;right:0;width:194px;}
.index-wrapper .i-close{position:absolute;top:10px;right:10px;}
.index-wrapper h2{font-weight:normal;font-size:1.5em;}
.index-wrapper .login h2{float:left;}
.index-wrapper .login a.lost{float:right;}
.index-wrapper .login label.remember{float:left;padding-left:60px;font-size:11px;padding-top:9px;height:auto;line-height:14px;}
.index-wrapper .login label.remember input{position:static;width:auto;margin-left:0;margin-top:-2px;}
.index-wrapper .login p{float:right;padding-top:10px;}
.index-wrapper .login strong{display:block;padding-top:30px;clear:both;text-align:center;}
.index-wrapper .login strong a{color:#e4146e;font-weight:normal;font-size:1.5em;}
.index-wrapper #lost{display:none;background-image:url(bg/form/lost.png);right:0;width:250px;color:#fff;}
.index-wrapper #lost .i-close{background-image:url(icon/close-black.png);}
.index-wrapper #lost p{display:block;margin:14px 0;width:210px;}
.index-wrapper #lost input{width:100%;margin-top:20px;}
.index-wrapper #registration{display:none;background-image:url(bg/form/registration.png);height:295px;width:250px;right:0;}
.index-wrapper #registration input[type="password"]{width:138px;}
.index-wrapper #registration .b{background-color:#f1f2f2;margin:16px 0 10px 0;}
.index-wrapper #registration .b p{font-size:11px;padding:10px 20px;}
.index-wrapper #registration button{margin-top:20px;}

.column-mini,
.column{border:0 solid #c0c0c0;border-width:0 1px;background:#fff;float:left;width:100%;}
.column-main{width:62.8em;}
.column-mini{width:31.3em;margin-left:8px;margin-bottom:11px;}
/* knowledge */
.column-main-container{width:63em;float:left;}
.body-wrapper{border:0 solid #fff;border-width:0 1px;background:#fff url(bg/body/body-wrapper.png) repeat-x 0 0;padding:14px 18px;overflow:hidden;}
.b-title{background:url(bg/body/hr-repeat.png) repeat-x 0 100%;margin-bottom:9px;padding-bottom:11px;position:relative;}

.b-title h1,
.b-title h2{font-size:20px;margin-left:-1px;}
.b-title #spotlighted {position:absolute;right:0;bottom:15px;font-size:110%; width:15px; height: 21px; background:transparent url(/t/icon/warming.png) no-repeat;}
.b-title #photographer {display:block; position:absolute;right:0;bottom:6px;width:40px; height: 33px; background:transparent url(/t/icon/camera.png) no-repeat;}
.b-title .hrefs {position:absolute; right:0; bottom:15px; font-size:110%;}
.b-search{float:left;margin-right:2em;width:14em;}
#all_list{background:url(icon/all-list.jpg) no-repeat;font-size:1.1em;padding:0 0 0 20px; margin-top: -22px; position:relative; float:right; height:19px;}
.b-search dl{font-size:120%;line-height:1.5;}
.b-search dt{font-weight:bold;padding:16px 0 0 6px;}
.b-search dd{line-height:1.4;margin:1px 0;height:17px;}
.b-search dd{line-height:1.4;margin:1px 0;height:17px;}

.b-search .groups dd.selected-button {background:url(/t/bg/blocks/group-selected.png) no-repeat; width: 140px; height:17px; line-height:16px; }
.b-search .groups dd.selected-button .rem{float:right;background:url(icon/remove.png);width:11px;height:11px;overflow:hidden;text-indent:-100em;display:block;margin:3px 9px 0 0;}
.b-search .groups dd.selected-button:hover .rem{background:url(icon/remove_hi.png);}
.b-search .groups dd.selected-button span {color: #fff; text-decoration: none;}

.b-search .groups dd { cursor: pointer; }
.b-search .groups dd a{margin-left:10px;height:1.33em;}
.b-search .groups dd span{margin-left: 6px; float: left; color: #0392f1; text-decoration: underline;}
.b-search .groups dd.dis span,
.b-search .groups dd.dis a {color:#999;text-decoration:none;cursor:default;}

.search-control {background:url(bg/blocks/green-line.png) no-repeat; padding:5px; color:#fff; height: 22px;}
.search-form strong{font-size:120%;line-height:1;display:block;padding:12px 0 17px 0;}
.search-form input{width:575px; padding:2px 0 2px 4px;font-size:14px;text-align:left; background: #f4f7c2; line-height: 18px; height:18px; border-top:none;}
.search-form small{color:#f1f7b6;line-height:1.5;display:block;}
.search-form dl{overflow:hidden;}
.search-form dt{padding:0;font-size:92%;}
.search-form dd{background-color:#89af21;cursor:pointer;margin-bottom:3px;height:auto;overflow:hidden;padding:0 0 2px;}
.search-form span{float:left;text-decoration:underline;font-size:11px;padding-left:6px;width:100px;}

#cocktails-page .b-title, #cocktail-page .b-title { padding-bottom: 11px; }
#cocktails-page .b-title h1, #cocktail-page .b-title h1 {font-size:20px } 
#cocktails-page .b-title #spotlighted .group {display:none}
#search_tabs { overflow: hidden; margin-bottom:-1px; position:relative; }
#search_tabs li { margin-right: 1px; float: left; background: url(bg/blocks/tab.png); width: 94px; height: 21px; line-height:21px; padding: 0 3px; color: #fff; font-size: 11px; text-align: center; cursor: pointer;}
#search_tabs li.selected {background: url(bg/blocks/tab-selected.png); cursor: default;}

#search_by_letter a {text-decoration:none; color:#fff; font-size: 14px;}
#letters_all{float:left; width: 40px; text-align:center;}
/* ... */

